# CubeShuffle

./: .dockerignore  .gitmodules  CLI.Dockerfile  Cargo.toml  CubeShuffle.sln  Directory.Build.props  PRIVACY_POLICY.adoc  README.adoc  README.md  cubeshuffle.keystore
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  cli-builds.yml  cordova-build.yml  publish.yml  rust.yml  tauri-linux-build.yml  tauri-macos-build.yml  tauri-windows-build.yml  validate.yml  wasm-build.yml
.github/workflows/templates/: cordova-build.yml  tauri-windows-build.yml
CubeShuffle.CLI/: CubeShuffle.CLI.csproj  DistributionShuffleOptions.cs  Dockerfile  Program.cs  packages.lock.json
CubeShuffle.Core/: DistributionShuffle.cs  Pack.cs  Pile.cs
CubeShuffle.Core/Utility/: EnumerableExtensions.cs  ListExtensions.cs  RandomExtensions.cs
Sample/: 360.json  540.json
assets/logo/: logo.icns
cube_shuffle-cli/: Cargo.toml
cube_shuffle-cli/src/: main.rs  output.rs
cube_shuffle-cordova/: .gitignore  config.xml  package-lock.json  package.json
cube_shuffle-core/: Cargo.toml
cube_shuffle-core/src/: distribution_shuffle.rs  lib.rs
cube_shuffle-wasm/: Cargo.toml  index.html  style.sass
cube_shuffle-wasm/src/: components.rs  main.rs
cube_shuffle-wasm/src/components/: add_pile.rs  app.rs  integer_input.rs  pack_card.rs  pack_list.rs  pile_card.rs  pile_list.rs  piler.rs  text_input.rs
docs/: distribution_shuffle.adoc
docs/installation/: Android.adoc  CLI.adoc  Desktop.adoc  android.adoc  desktop.adoc
docs/readme/: badges.adoc  randomness.adoc
src-tauri/: .gitignore  Cargo.toml  beforeBuildCommand_windows.cmd  release.conf.jq  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/src/: main.rs
