[package]
name = "cube_shuffle-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse-display = "0.5.3"
rand = "0.8.4"
clap = { version = "3.0.13", features = ["derive", "color", "suggestions"] }
cube_shuffle-core = { path = "../cube_shuffle-core"}