[package]
name = "cube_shuffle-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
parse-display = "^0.5"
rand = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.8"
clap = { version = "^3.1", features = ["derive", "color", "suggestions"] }
cube_shuffle-core = { path = "../cube_shuffle-core" }