[package]
name = "cube_shuffle-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
yew = { git = "https://github.com/yewstack/yew/" }
web-sys = { version = "0.3", features = ["Event", "EventTarget", "InputEvent"] }
wasm-bindgen = "0.2"
cube_shuffle-core = { path = "../cube_shuffle-core" }