[package]
name = "cube_shuffle-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "^1.4"
itertools = "^0.10"
rand = "^0.8"
sha3 = "^0.10"
getrandom = { version = "^0.2", features = ["js"] }
yew = { git = "https://github.com/yewstack/yew/" }
console_error_panic_hook = "^0.1.7"
web-sys = { version = "^0.3", features = ["Event", "EventTarget", "InputEvent"] }
wasm-bindgen = "^0.2"
cube_shuffle-core = { path = "../cube_shuffle-core" }

[dev-dependencies]
proptest = "^1.0"