[package]
name = "cube_shuffle-tauri"
version = "0.1.0"
description = "Card game shuffling utility"
authors = ["Philip Borgström"]
license = "GNU Affero General Public License v3.0 or later"
repository = "https://github.com/philipborg/CubeShuffle"
default-run = "cube_shuffle-tauri"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
tauri = { version = "1.0.4", features = ["shell-open", "updater"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
